--- a/admin-service/package.json
+++ b/admin-service/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.2.0",
+    "@nestjs/serve-static": "^3.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "env-cmd": "^10.1.0",
     "mysql2": "^2.3.3",
