update n add rabbitmq

--- a/admin-service/.env
+++ b/admin-service/.env
@@ -7,3 +7,8 @@ DATABASE=app_db
 
 LOCATION_UPLOAD_FILE=../uploads
 LOCATION_URL=http://localhost:3000/
+
+RABBITMQ_USER=admin
+RABBITMQ_PASSWORD=admin123
+RABBITMQ_HOST=localhost:5672
+RABBITMQ_QUEUE_NAME=test-message
