--- a/user-service/.env
+++ b/user-service/.env
@@ -8,3 +8,8 @@ DATABASE=app_db
 SALT_WORK_FACTOR=10
 EXPIRES_IN_ACCESS_TOKEN=30d
 EXPIRES_IN_REFRESH_TOKEN=30d
+
+RABBITMQ_USER=admin
+RABBITMQ_PASSWORD=admin123
+RABBITMQ_HOST=localhost:5672
+RABBITMQ_QUEUE_NAME=test-message
