--- a/admin-service/package.json
+++ b/admin-service/package.json
@@ -22,10 +22,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/microservices": "^9.2.1",
     "@nestjs/platform-express": "^9.2.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "amqp-connection-manager": "^4.1.9",
+    "amqplib": "^0.10.3",
     "env-cmd": "^10.1.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
