--- a/admin-service/package.json
+++ b/admin-service/package.json
@@ -31,6 +31,7 @@
     "amqp-connection-manager": "^4.1.9",
     "amqplib": "^0.10.3",
     "env-cmd": "^10.1.0",
+    "joi": "^17.7.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
