--- a/order-service/.env
+++ b/order-service/.env
@@ -4,3 +4,8 @@ PORT=6033
 USERNAME=root
 PASSWORD=admin123
 DATABASE=app_db
+
+RABBITMQ_USER=admin
+RABBITMQ_PASSWORD=admin123
+RABBITMQ_HOST=localhost:5672
+RABBITMQ_QUEUE_NAME=test-message
